Revert "134929 - Bug: Adjust v2 cards autogenerated and authored sup alignment"
This reverts commit 26ea712986df5387d323966d6c72f4e666d399ca.

--- a/blocks/v2-cards/v2-cards.css
+++ b/blocks/v2-cards/v2-cards.css
@@ -162,18 +162,6 @@
   align-items: flex-start;
 }
 
-.v2-cards__button sup {
-  display: inline-block;
-  font-size: 0.65em;
-  line-height: 1;
-  margin-top: -0.62em;
-  vertical-align: baseline;
-}
-
-.v2-cards__button sup.v2-cards__sup-generated {
-  margin-top: 0.9em;
-}
-
 .v2-cards__button-container .icon {
   stroke: currentcolor;
   width: 16px;
